--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.6-next.c662dfb0",
+    "request": "^2.88.0",
     "typescript": "3.1.3"
   },
   "scripts": {
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/node": "^10.12.2"
+  }
 }
